
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hupu.rig.network.common";
option go_package = "agent/com.hupu.rig.agent/pb/agent/common";

message KeyStringValuePair {
    string key = 1;
    string value = 2;
}

message KeyIntValuePair {
    string key = 1;
    int32 value = 2;
}

enum DetectPoint {
    client = 0;
    server = 1;
    proxy = 2;
}

enum LanguageType {
    java = 0;
    php = 1;
    nodejs = 2;
    python = 3;
    go = 4;
}

message Commands {
    repeated Command commands = 1;
}

message Command {
    string command = 1;
    repeated KeyStringValuePair args = 2;
}
